Kora update